@@ -62,7 +62,6 @@ import java.util.concurrent.ConcurrentMap;
 import java.util.jar.JarEntry;
 import java.util.spi.ResourceBundleControlProvider;
 import java.util.spi.ResourceBundleProvider;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import jdk.internal.loader.BootLoader;
@@ -73,6 +72,8 @@ import jdk.internal.reflect.Reflection;
 import sun.security.action.GetPropertyAction;
 import sun.util.locale.BaseLocale;
 import sun.util.locale.LocaleObjectCache;
+import sun.util.resources.Bundles;
+
 import static sun.security.util.SecurityConstants.GET_CLASSLOADER_PERMISSION;
 
 
@@ -578,6 +579,7 @@ public abstract class ResourceBundle {
         return locale;
     }
 
+    @SuppressWarnings("removal")
     private static ClassLoader getLoader(Module module) {
         PrivilegedAction<ClassLoader> pa = module::getClassLoader;
         return AccessController.doPrivileged(pa);
@@ -1514,14 +1516,12 @@ public abstract class ResourceBundle {
 
     private static class ResourceBundleControlProviderHolder {
         private static final PrivilegedAction<List<ResourceBundleControlProvider>> pa =
-            () -> {
-                return Collections.unmodifiableList(
-                    ServiceLoader.load(ResourceBundleControlProvider.class,
-                                       ClassLoader.getSystemClassLoader()).stream()
-                        .map(ServiceLoader.Provider::get)
-                        .collect(Collectors.toList()));
-            };
+            () -> ServiceLoader.load(ResourceBundleControlProvider.class,
+                                   ClassLoader.getSystemClassLoader()).stream()
+                             .map(ServiceLoader.Provider::get)
+                             .toList();
 
+        @SuppressWarnings("removal")
         private static final List<ResourceBundleControlProvider> CONTROL_PROVIDERS =
             AccessController.doPrivileged(pa);
 
@@ -1594,6 +1594,7 @@ public abstract class ResourceBundle {
         Objects.requireNonNull(module);
         Module callerModule = caller.getModule();
         if (callerModule != module) {
+            @SuppressWarnings("removal")
             SecurityManager sm = System.getSecurityManager();
             if (sm != null) {
                 sm.checkPermission(GET_CLASSLOADER_PERMISSION);
@@ -1831,19 +1832,13 @@ public abstract class ResourceBundle {
         if (bundle == null && !cacheKey.callerHasProvider()) {
             for (String format : formats) {
                 try {
-                    switch (format) {
-                    case "java.class":
-                        bundle = ResourceBundleProviderHelper
-                            .loadResourceBundle(callerModule, module, baseName, targetLocale);
-
-                        break;
-                    case "java.properties":
-                        bundle = ResourceBundleProviderHelper
-                            .loadPropertyResourceBundle(callerModule, module, baseName, targetLocale);
-                        break;
-                    default:
-                        throw new InternalError("unexpected format: " + format);
-                    }
+                    bundle = switch (format) {
+                      case "java.class" -> ResourceBundleProviderHelper
+                          .loadResourceBundle(callerModule, module, baseName, targetLocale);
+                      case "java.properties" -> ResourceBundleProviderHelper
+                          .loadPropertyResourceBundle(callerModule, module, baseName, targetLocale);
+                      default -> throw new InternalError("unexpected format: " + format);
+                    };
 
                     if (bundle != null) {
                         cacheKey.setFormat(format);
@@ -1889,6 +1884,7 @@ public abstract class ResourceBundle {
      * Returns the service type of the given baseName that is visible
      * to the given class loader
      */
+    @SuppressWarnings("removal")
     private static Class<ResourceBundleProvider>
             getResourceBundleProviderType(String baseName, ClassLoader loader)
     {
@@ -1923,6 +1919,7 @@ public abstract class ResourceBundle {
     /**
      * Loads ResourceBundle from service providers.
      */
+    @SuppressWarnings("removal")
     private static ResourceBundle loadBundleFromProviders(String baseName,
                                                           Locale locale,
                                                           ServiceLoader<ResourceBundleProvider> providers,
@@ -2918,15 +2915,8 @@ public abstract class ResourceBundle {
                         // Supply script for users who want to use zh_Hans/zh_Hant
                         // as bundle names (recommended for Java7+)
                         switch (region) {
-                        case "TW":
-                        case "HK":
-                        case "MO":
-                            script = "Hant";
-                            break;
-                        case "CN":
-                        case "SG":
-                            script = "Hans";
-                            break;
+                            case "TW", "HK", "MO" -> script = "Hant";
+                            case "CN", "SG"       -> script = "Hans";
                         }
                     }
                 }
@@ -2964,12 +2954,8 @@ public abstract class ResourceBundle {
                             // Supply region(country) for users who still package Chinese
                             // bundles using old convension.
                             switch (script) {
-                                case "Hans":
-                                    region = "CN";
-                                    break;
-                                case "Hant":
-                                    region = "TW";
-                                    break;
+                                case "Hans" -> region = "CN";
+                                case "Hant" -> region = "TW";
                             }
                         }
                     }
@@ -3102,6 +3088,12 @@ public abstract class ResourceBundle {
          * nor {@code "java.properties"}, an
          * {@code IllegalArgumentException} is thrown.</li>
          *
+         * <li>If the {@code locale}'s language is one of the
+         * <a href="./Locale.html#legacy_language_codes">Legacy language
+         * codes</a>, either old or new, then repeat the loading process
+         * if needed, with the bundle name with the other language.
+         * For example, "iw" for "he" and vice versa.
+         *
          * </ul>
          *
          * @param baseName
@@ -3156,6 +3148,22 @@ public abstract class ResourceBundle {
              * that is visible to the given loader and accessible to the given caller.
              */
             String bundleName = toBundleName(baseName, locale);
+            var bundle = newBundle0(bundleName, format, loader, reload);
+            if (bundle == null) {
+                // Try loading legacy ISO language's other bundles
+                var otherBundleName = Bundles.toOtherBundleName(baseName, bundleName, locale);
+                if (!bundleName.equals(otherBundleName)) {
+                    bundle = newBundle0(otherBundleName, format, loader, reload);
+                }
+            }
+
+            return bundle;
+        }
+
+        @SuppressWarnings("removal")
+        private ResourceBundle newBundle0(String bundleName, String format,
+                    ClassLoader loader, boolean reload)
+                    throws IllegalAccessException, InstantiationException, IOException {
             ResourceBundle bundle = null;
             if (format.equals("java.class")) {
                 try {
@@ -3562,6 +3570,7 @@ public abstract class ResourceBundle {
         /**
          * Returns a new ResourceBundle instance of the given bundleClass
          */
+        @SuppressWarnings("removal")
         static ResourceBundle newResourceBundle(Class<? extends ResourceBundle> bundleClass) {
             try {
                 @SuppressWarnings("unchecked")
@@ -3601,6 +3610,7 @@ public abstract class ResourceBundle {
             String bundleName = Control.INSTANCE.toBundleName(baseName, locale);
             try {
                 PrivilegedAction<Class<?>> pa = () -> Class.forName(module, bundleName);
+                @SuppressWarnings("removal")
                 Class<?> c = AccessController.doPrivileged(pa, null, GET_CLASSLOADER_PERMISSION);
                 trace("local in %s %s caller %s: %s%n", module, bundleName, callerModule, c);
 
@@ -3701,7 +3711,7 @@ public abstract class ResourceBundle {
                 }
             };
 
-            try (InputStream stream = AccessController.doPrivileged(pa)) {
+            try (@SuppressWarnings("removal") InputStream stream = AccessController.doPrivileged(pa)) {
                 if (stream != null) {
                     return new PropertyResourceBundle(stream);
                 } else {
